--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=hii-nice-2-meet-u <0x0.whitecat@gmail.com>
 sentence=Arduino Library for Hanuman_32
 paragraph=*
 category=Device Control
-url=*
+url=https://github.com/hii-nice-2-meet-u/HANUMAN_32
 architectures=esp32
 depends=*
